# NoteBucket

./: .gitignore  AGENTS.md  LICENSE  PRD.md  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/schemas/com.example.notebucket.data.NoteBucketDatabase/: 1.json  2.json  3.json  4.json  5.json  6.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bge-jni.cpp
app/src/main/java/com/example/notebucket/: MainActivity.kt  NoteBucketApp.kt
app/src/main/java/com/example/notebucket/ai/: BgeEmbedder.kt  NativeBridge.kt
app/src/main/java/com/example/notebucket/data/: AttachmentStorage.kt  NoteBucketDatabase.kt  NoteBucketRepository.kt  SettingsRepository.kt
app/src/main/java/com/example/notebucket/data/dao/: AttachmentDao.kt  DraftDao.kt  FolderDao.kt  NoteDao.kt
app/src/main/java/com/example/notebucket/data/entity/: AttachmentEntity.kt  DraftEntity.kt  FolderEntity.kt  NoteEntity.kt
app/src/main/java/com/example/notebucket/data/mapper/: Mappers.kt
app/src/main/java/com/example/notebucket/di/: DataStoreModule.kt  DatabaseModule.kt  WorkManagerModule.kt
app/src/main/java/com/example/notebucket/sort/: Folder.kt  FolderRouter.kt  FolderSorter.kt  Note.kt
app/src/main/java/com/example/notebucket/ui/: SpikeScreen.kt  SpikeViewModel.kt
app/src/main/java/com/example/notebucket/work/: DraftCommitWorker.kt  DraftLifecycleObserver.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
